--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <meta name="author" content="Łukasz Holeczek">
 	<link rel="shortcut icon" href="assets/favicon.ico">
 	<title>შემოსავლების სამსახური</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
   <script>
